added car-details component, addded navigation, routing to server endpoint to receive data, changed mock data to server data via HttpClient;

--- a/cars-frontend/src/app/app.component.html
+++ b/cars-frontend/src/app/app.component.html
@@ -1,4 +1,8 @@
 <h1>SpringBoot with SpringSecurity+JWT project and Angular</h1>
 <hr>
 <router-outlet></router-outlet>
+<nav>
+    <a routerLink="/dashboard">Go to Dashboard</a>
+    <a routerLink="/cars">Go to Cars</a>
+  </nav>
 <app-messages></app-messages>
