added dynamic search on the frontend and backend and some other stuff

--- a/cars-frontend/src/app/car-detail/car-detail.component.html
+++ b/cars-frontend/src/app/car-detail/car-detail.component.html
@@ -1,11 +1,10 @@
 <div *ngIf="car">
-
-    <h2>{{car.model | uppercase}} Details</h2>
-    <div><span>Brand: </span>{{car.brand.brandName}}</div>
-    <div>
-      <label for="car-name">Car Model: </label>
-      <input id="car-name" [(ngModel)]="car.model" placeholder="model">
-    </div>
-  
+  <h2>{{car.model | uppercase}} Details</h2>
+  <div><span>Brand: </span>{{car.brand.brandName}}</div>
+  <div>
+    <label for="car-name">Car Model: </label>
+    <input id="car-name" [(ngModel)]="car.model" placeholder="model">
   </div>
   <button (click)="goBack()">go back</button>
+  <button (click)="save()">save</button>
+</div>
