--- a/cars-frontend/src/app/app.component.html
+++ b/cars-frontend/src/app/app.component.html
@@ -4,5 +4,6 @@
 <nav>
     <a routerLink="/dashboard">Go to Dashboard</a>
     <a routerLink="/cars">Go to Cars</a>
+    <a routerLink="/login">Login</a>
   </nav>
 <app-messages></app-messages>
