fixed resolution of file and folder names depending on brand and model

--- a/cars-frontend-v.2/src/app/add-car/add-car.component.html
+++ b/cars-frontend-v.2/src/app/add-car/add-car.component.html
@@ -17,7 +17,7 @@
   </div>
   <br>  <hr>
   <div class="text-center">
-    <input class="form-control" type="file" (change)="onChange($event)">
+    <input class="form-control" type="file" (change)="onChange($event)" accept="image/jpeg">
     <button (click)="onUpload()" class="btn btn-success"> ADD CAR</button>
   </div>
   <!-- Shareable short link of uoloaded file -->
