implemented uniquelization feature, but encoutered problems with angular material checkboxes, //TODO dynamically load brands to select for uniquelization

--- a/cars-frontend-v.2/src/app/cars/cars.component.css
+++ b/cars-frontend-v.2/src/app/cars/cars.component.css
@@ -1,3 +1,15 @@
+.example-section {
+  margin: 12px 0;
+}
+
+.example-margin {
+  margin: 0 12px;
+}
+
+ul {
+  list-style-type: none;
+  margin-top: 4px;
+}
 /* HeroesComponent's private CSS styles */
 .cars {
     align-content: center;
@@ -11,7 +23,7 @@
     position: relative;
     cursor: pointer;
   }
-  
+
   .cars li:hover {
     left: .1em;
   }
@@ -23,7 +35,7 @@
     margin: 1rem 0;
     box-sizing: border-box;
   }
-  
+
   .cars a {
     color: #333;
     text-decoration: none;
@@ -35,17 +47,17 @@
     display: block;
     width: 100%;
   }
-  
+
   .cars a:hover {
     color: #2c3a41;
     background-color: #e6e6e6;
   }
-  
+
   .cars a:active {
     background-color: #525252;
     color: #fafafa;
   }
-  
+
   .cars .badge {
     display: inline-block;
     font-size: small;
@@ -63,18 +75,18 @@
     border-radius: 4px 0 0 4px;
   }
 
-  
+
 .add-button {
   padding: .5rem 1.5rem;
   font-size: 1rem;
   margin-bottom: 2rem;
  }
- 
+
  .add-button:hover {
    color: white;
    background-color: #42545C;
  }
- 
+
  button.delete {
    position: absolute;
    left: 210px;
@@ -84,7 +96,7 @@
    font-size: 1.1rem;
    padding: 1px 10px 3px 10px;
  }
- 
+
  button.delete:hover {
    background-color: #525252;
    color: white;
