--- a/cars-frontend-v.2/src/app/cars/cars.component.html
+++ b/cars-frontend-v.2/src/app/cars/cars.component.html
@@ -1,30 +1,30 @@
 <!--<app-add-car></app-add-car>-->
 <div class="row">
 
-  <div class="col-4">
-    <div class="row">
-      <section class="example-section">
-  <span class="example-list-section">
-    <mat-checkbox class="example-margin"
-                  [checked]="allBrandsComplete"
-                  [color]="taskBrand.color"
-                  [indeterminate]="someBrandComplete()"
-                  (change)="setBrandAll($event.checked)">
-      {{taskBrand.name}}
-    </mat-checkbox>
-  </span>
-        <span class="example-list-section">
-    <ul>
-      <li *ngFor="let subtask of taskBrand.subtasks">
-        <mat-checkbox [(ngModel)]="subtask.completed"
-                      [color]="subtask.color"
-                      (ngModelChange)="updateAllBrandComplete()">
-          {{subtask.name}}
-        </mat-checkbox>
-      </li>
-    </ul>
-  </span>
-      </section>
+<!--  <div class="col-4">-->
+<!--    <div class="row">-->
+<!--      <section class="example-section">-->
+<!--  <span class="example-list-section">-->
+<!--    <mat-checkbox class="example-margin"-->
+<!--                  [checked]="allBrandsComplete"-->
+<!--                  [color]="taskBrand.color"-->
+<!--                  [indeterminate]="someBrandComplete()"-->
+<!--                  (change)="setBrandAll($event.checked)">-->
+<!--      {{taskBrand.name}}-->
+<!--    </mat-checkbox>-->
+<!--  </span>-->
+<!--        <span class="example-list-section">-->
+<!--    <ul>-->
+<!--      <li *ngFor="let subtask of taskBrand.subtasks">-->
+<!--        <mat-checkbox [(ngModel)]="subtask.completed"-->
+<!--                      [color]="subtask.color"-->
+<!--                      (ngModelChange)="updateAllBrandComplete()">-->
+<!--          {{subtask.name}}-->
+<!--        </mat-checkbox>-->
+<!--      </li>-->
+<!--    </ul>-->
+<!--  </span>-->
+<!--      </section>-->
     </div>
 
     <!--  <div class="col-4">-->
